# coding-scrapbook

./: .gitignore  Makefile  README.md  coding-scrapbook.code-workspace
Elixir/confrog/: .gitignore  README.md  mix.exs
Elixir/confrogo/: .env.example  .gitignore  Makefile  README.md  mix.exs
Elixir/confrogo/config/: config.exs  runtime.exs
Elixir/confrogo/lib/: confrogo.ex
Elixir/confrogo/test/: confrogo_test.exs
Elixir/moving-boxes-game/: README.md  backlog.md
Elixir/moving-boxes-game/moving_boxes/: .gitignore  README.md  mix.exs
Elixir/random-quote/: .gitignore  README.md  backlog.md  mix.exs
Elixir/random-quote/resources/: quotes.json
Elixir/random-quote/test/: test_helper.exs
Haskell/Shorthndr/: README.md  backlog.md
Haskell/timeboxy/: ChangeLog.md  README.md  package.yaml  timeboxy.cabal
Haskell/timeboxy/app/: Main.hs
JS/Typography/: README.md
JS/Typography/typography/: README.md  package-lock.json
Jupyter/study-filter/: Dockerfile  Makefile  README.md
Jupyter/study-filter/workspace/: selection.ipynb
LISP/aws-buddy/: README.md  main.lisp
LISP/coin-toss/: Makefile  README.md  main.lisp
Node/random-poems/: README.md  backlog.txt  index.js  package-lock.json  package.json
Python/maze-maker/: pyproject.toml
Python/maze-maker/maze_maker/: main.py
Python/maze-maker/maze_maker/makers/: __init__.py  models.py  slashes.py
Rust/hello-rust/: README.md
Rust/hello-rust/greet-the-rust/: Cargo.toml  README.md
Rust/hello-rust/nim/: README.md
TypeScript/doctests/: README.md
TypeScript/labyrinther/: README.md  backlog.txt
(+47 files in other folders)
